Change Log
==========

Version 0.7.1 (2018-10-03)
--------------------------

* Added requirement name to deprecation message to make tracking down
  user-only requirements warnings easier.

Version 0.7 (2018-09-03)
------------------------

* Added ``flask_allows.view.guard_entire`` and
  ``flask_allows.views.exempt_from_requirements`` to make protecting entire
  blueprints easier.
* Added ``__all__`` export markers to flask_allows modules to prevent accidental
  re-export of other symbols when using ``from flask_allows.module import *``


Version 0.6 (2018-05-26)
------------------------

* ``Permission`` no longer needs an application context for construction
  but does require one for evaluation now.
* Added ``Allows.run`` a public helper that performs the complete fulfill and
  fail cycle. This cleans up the duplication between ``Allows.requires``,
  ``requires`` and ``Permission.__enter__``
* Removed ``Permission.throw_type``
* Removed ``PermissionedView``, ``PermissionedMethodView``
* Added ability to disable requirements already registered on routes and inside
  handlers via the ``flask_allows.overrides.OverrideManager`` class
* Added ability to add more requirements to be run during checks on routes
  and other handlers via the ``flask_allows.additional.AdditionalManager`` class



Version 0.5.1 (2018-04-22)
--------------------------

* Added ``wants_request`` to ease transition to user only requirements



Version 0.5 (2018-04-17)
------------------------

* Real documentation
* Accepting request in requirements is now deprecated, pending removal in
  1.0
* Promoted internal ``_allows`` context local to part of the public interface
* Bug Fix: ConditionalRequirement returned False when no requirements were provided
    it now returns True and mimics the behavior of ``all`` better


Version 0.4 (2017-08-29)
------------------------

* Clarify deprecation message for PermissionedView, will be removed in 0.6
* Deprecate Permission.throw_type for 0.6 removak