@@ -1,3 +1,3 @@
-sphinx_rtd_theme==0.3.1
-sphinx==1.7.4
-sphinx-issues==0.4.0
+sphinx_rtd_theme==0.5.2
+sphinx==4.0.2
+sphinx-issues==1.2.0
