@@ -1,2 +1,2 @@
-flake8>=3.5.0
-flake8-bugbear>=18.2.0
+flake8>=3.9.2
+flake8-bugbear>=21.4.3
