@@ -1,3 +1,3 @@
 -rrequirements.txt
 -rrequirements-cov.txt
-pytest==3.5.0
+pytest==6.2.4
