@@ -1,1 +1,1 @@
-flask==0.12.2
+flask==2.0.1
