@@ -28,17 +28,18 @@ if __name__ == "__main__":
             "Issue Tracker": "https://github.com/justanr/flask-allows/issues",
             "Documentation": "https://flask-allows.readthedocs.io/en/latest/",
         },
-        python_requires=">=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*",
+        python_requires=">=3.6",
         classifiers=[
             "Development Status :: 4 - Beta",
             "Framework :: Flask",
             "Environment :: Web Environment",
             "Intended Audience :: Developers",
             "License :: OSI Approved :: MIT License",
-            "Programming Language :: Python :: 2.7",
-            "Programming Language :: Python :: 3.4",
-            "Programming Language :: Python :: 3.5",
+            "Programming Language :: Python :: 3",
             "Programming Language :: Python :: 3.6",
+            "Programming Language :: Python :: 3.7",
+            "Programming Language :: Python :: 3.8",
+            "Programming Language :: Python :: 3.9",
         ],
-        install_requires=["Flask"],
+        install_requires=["Flask>=2.0"],
     )
