@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8,black,py27,py34,py35,py36,py37,cov-report,cov-store
+envlist = flake8,black,py36,py37,py38,py39,cov-report,cov-store
 
 [testenv]
 usedevelop = true
@@ -33,13 +33,13 @@ commands =
 [testenv:black]
 skip_install = true
 deps = black
-basepython=python3.6
+basepython=python3.9
 commands = black --check test/ src/flask_allows/
 
 [testenv:flake8]
 skip_install = true
 deps = -r{toxinidir}/requirements-lint.txt
-basepython=python3.6
+basepython=python3.9
 commands =
     flake8 --version
     flake8 --config={toxinidir}/tox.ini {toxinidir}/src/flask_allows {toxinidir}/test
