@@ -1,6 +1,12 @@
 Change Log
 ==========
 
+Version unreleased
+------------------
+
+* Dropped support for Python 2 and Python < 3.6.
+
+
 Version 0.7.1 (2018-10-03)
 --------------------------
 
